--- a/link/login.html
+++ b/link/login.html
@@ -101,7 +101,7 @@
     <div id="header">
       
 
- <div id="OncanLogo"><img alt="OntarioCanadaLogo" width="170" height="51" src="/oinp_enu/dynamicform/resources/images/std01_061519.jpg" /></div>
+ <div id="OncanLogo"><img alt="OntarioCanadaLogo" width="170" height="51" src="std01_061519.jpg" /></div>
     <p id="textlinks">
         <a id="skipNav" onkeypress="skipToContent();" onclick="skipToContent();" tabindex="0">Skip to Content</a>
         
