--- a/mycic/index.html
+++ b/mycic/index.html
@@ -380,7 +380,7 @@
                   <form
                     id="view_dashboard_0"
                     action="./dashboard.html"
-                    method="post"
+                    method="get"
                   >
                     <div class="form-inline statusDiv">
                       <input
