--- a/mycic/index.html
+++ b/mycic/index.html
@@ -379,8 +379,8 @@
                 <td>
                   <form
                     id="view_dashboard_0"
-                    action="/dashboard.html"
-                    method="post"
+                    action="./dashboard.html"
+                    method="get"
                   >
                     <div class="form-inline statusDiv">
                       <input
